refactor email body for data dump export trigger